- Applies button css to "add asset" button - Applies download style from author page to jam page too - Fixes entry header colors on jam page - Fixes background colors on some panels in dark mode: Pie chart on themes page, game card flipping animation background - Fixes text colors for entries

--- a/template/css/nightmode.css
+++ b/template/css/nightmode.css
@@ -32,6 +32,7 @@ body{
 
 .panel{
     border-color: #7B8991;
+    background-color: #383838;
 }
 
 .theme-old{
